Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-126348

QToolButton widgets have wrong background colors with windows11 style and dark themes

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.7.3, 6.8.0 Beta2, 6.9.0 FF
    • 6.7.1
    • QPA: Windows
    • None
    • Windows11 24.04, Qt 6.7.1, OpenMW-Launcher application
    • Windows
    • 86bcddac5 (dev), a821bb2d3 (6.8), 7e34bcd82 (6.7)

      A new windows11 style seems to use the same background color for hovered/selected QToolButton widgets with both dark and light themes. It makes icons and text in such widgets barely visible with dark themes:

      With light themes it looks fine:

      These icons come from Windows 11 system theme since Qt 6.7.

        For Gerrit Dashboard: QTBUG-126348
        # Subject Branch Project Status CR V

            owolff Oliver Wolff
            akortunov Andrei Kortunov
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes